Add Tic-Tac-Toe page and navigation link

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
         <div class="bank-name">Galactic Reserve</div>
         <div class="nav-item" onclick="document.getElementById('investmentModal').style.display='flex'">Investment Strategies</div>
+        <div class="nav-item" onclick="location.href='tictactoe.html'">Tic-Tac-Toe</div>
     </div>
     <div id="investmentModal" class="modal">
         <div class="modal-content">
