--- a/tictactoe.html
+++ b/tictactoe.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="Style.css">
     <style>
