--- a/tictactoe.html
+++ b/tictactoe.html
@@ -66,10 +66,30 @@
     </div>
 
     <script>
-        const board = Array(9).fill(null);
+        let board = Array(9).fill(null);
         const cells = document.querySelectorAll('.cell');
-        let currentPlayer = 'X';
+        let currentPlayer;
+        let humanPlayer;
+        let aiPlayer;
         const resultEl = document.getElementById('result');
+
+        function startGame() {
+            board = Array(9).fill(null);
+            cells.forEach(cell => cell.textContent = '');
+            resultEl.textContent = '';
+            if (Math.random() < 0.5) {
+                humanPlayer = 'X';
+                aiPlayer = 'O';
+                currentPlayer = humanPlayer;
+                resultEl.textContent = 'You start!';
+            } else {
+                humanPlayer = 'O';
+                aiPlayer = 'X';
+                currentPlayer = aiPlayer;
+                resultEl.textContent = 'AI starts!';
+                setTimeout(aiMove, 500);
+            }
+        }
 
         cells.forEach(cell => {
             cell.addEventListener('click', () => handleMove(cell));
@@ -77,15 +97,32 @@
 
         function handleMove(cell) {
             const index = cell.dataset.index;
-            if (board[index] || resultEl.textContent) return;
-            board[index] = currentPlayer;
-            cell.textContent = currentPlayer;
-            if (checkWin(currentPlayer)) {
-                resultEl.textContent = currentPlayer + ' wins!';
+            if (board[index] || resultEl.textContent || currentPlayer !== humanPlayer) return;
+            board[index] = humanPlayer;
+            cell.textContent = humanPlayer;
+            if (checkWin(humanPlayer)) {
+                resultEl.textContent = 'You win!';
             } else if (board.every(Boolean)) {
                 resultEl.textContent = 'Draw!';
             } else {
-                currentPlayer = currentPlayer === 'X' ? 'O' : 'X';
+                currentPlayer = aiPlayer;
+                setTimeout(aiMove, 500);
+            }
+        }
+
+        function aiMove() {
+            if (resultEl.textContent) return;
+            const empty = board.map((v,i) => v ? null : i).filter(i => i !== null);
+            if (empty.length === 0) return;
+            const index = empty[Math.floor(Math.random() * empty.length)];
+            board[index] = aiPlayer;
+            cells[index].textContent = aiPlayer;
+            if (checkWin(aiPlayer)) {
+                resultEl.textContent = 'AI wins!';
+            } else if (board.every(Boolean)) {
+                resultEl.textContent = 'Draw!';
+            } else {
+                currentPlayer = humanPlayer;
             }
         }
 
@@ -99,13 +136,10 @@
         }
 
         function resetGame() {
-            for (let i = 0; i < board.length; i++) {
-                board[i] = null;
-            }
-            cells.forEach(cell => cell.textContent = '');
-            resultEl.textContent = '';
-            currentPlayer = 'X';
+            startGame();
         }
+
+        window.onload = startGame;
     </script>
 </body>
 </html>
