--- a/tictactoe.html
+++ b/tictactoe.html
@@ -37,6 +37,7 @@
         .result {
             margin-top: 20px;
         }
+   
     </style>
 </head>
 <body>
@@ -62,50 +63,97 @@
             <div class="cell" data-index="8"></div>
         </div>
         <div class="result" id="result"></div>
-        <button class="baton" onclick="resetGame()">Restart</button>
+        <button class="baton" id="restartBtn">Restart</button>
     </div>
 
     <script>
-        const board = Array(9).fill(null);
-        const cells = document.querySelectorAll('.cell');
-        let currentPlayer = 'X';
-        const resultEl = document.getElementById('result');
+        document.addEventListener('DOMContentLoaded', () => {
+            const cells = document.querySelectorAll('.cell');
+            const resultEl = document.getElementById('result');
+            const restartBtn = document.getElementById('restartBtn');
 
-        cells.forEach(cell => {
-            cell.addEventListener('click', () => handleMove(cell));
+            let board;
+            let humanPlayer;
+            let aiPlayer;
+            let currentPlayer;
+
+            cells.forEach(cell => {
+                cell.addEventListener('click', () => handleMove(cell));
+            });
+
+            restartBtn.addEventListener('click', startGame);
+
+            function startGame() {
+                board = Array(9).fill(null);
+                cells.forEach(cell => (cell.textContent = ''));
+                resultEl.textContent = '';
+
+                if (Math.random() < 0.5) {
+                    humanPlayer = 'X';
+                    aiPlayer = 'O';
+                    currentPlayer = humanPlayer;
+                    resultEl.textContent = 'You are X. Your turn!';
+                } else {
+                    humanPlayer = 'O';
+                    aiPlayer = 'X';
+                    currentPlayer = aiPlayer;
+                    resultEl.textContent = 'You are O. AI goes first!';
+                    setTimeout(aiMove, 500);
+                }
+            }
+
+            function handleMove(cell) {
+                const index = cell.dataset.index;
+                if (board[index] || resultEl.textContent || currentPlayer !== humanPlayer) return;
+
+                board[index] = humanPlayer;
+                cell.textContent = humanPlayer;
+
+                if (checkWin(humanPlayer)) {
+                    resultEl.textContent = 'You win!';
+                } else if (board.every(v => v)) {
+                    resultEl.textContent = 'Draw!';
+                } else {
+                    currentPlayer = aiPlayer;
+                    setTimeout(aiMove, 500);
+                }
+            }
+
+            function aiMove() {
+                if (resultEl.textContent) return;
+
+                const empty = board.map((v, i) => (v ? null : i)).filter(i => i !== null);
+                if (empty.length === 0) return;
+
+                const index = empty[Math.floor(Math.random() * empty.length)];
+                board[index] = aiPlayer;
+                cells[index].textContent = aiPlayer;
+
+                if (checkWin(aiPlayer)) {
+                    resultEl.textContent = 'AI wins!';
+                } else if (board.every(v => v)) {
+                    resultEl.textContent = 'Draw!';
+                } else {
+                    currentPlayer = humanPlayer;
+                }
+            }
+
+            function checkWin(player) {
+                const combos = [
+                    [0, 1, 2],
+                    [3, 4, 5],
+                    [6, 7, 8],
+                    [0, 3, 6],
+                    [1, 4, 7],
+                    [2, 5, 8],
+                    [0, 4, 8],
+                    [2, 4, 6]
+                ];
+                return combos.some(combo => combo.every(i => board[i] === player));
+            }
+
+            startGame();
         });
-
-        function handleMove(cell) {
-            const index = cell.dataset.index;
-            if (board[index] || resultEl.textContent) return;
-            board[index] = currentPlayer;
-            cell.textContent = currentPlayer;
-            if (checkWin(currentPlayer)) {
-                resultEl.textContent = currentPlayer + ' wins!';
-            } else if (board.every(Boolean)) {
-                resultEl.textContent = 'Draw!';
-            } else {
-                currentPlayer = currentPlayer === 'X' ? 'O' : 'X';
-            }
-        }
-
-        function checkWin(player) {
-            const combos = [
-                [0,1,2],[3,4,5],[6,7,8],
-                [0,3,6],[1,4,7],[2,5,8],
-                [0,4,8],[2,4,6]
-            ];
-            return combos.some(combo => combo.every(i => board[i] === player));
-        }
-
-        function resetGame() {
-            for (let i = 0; i < board.length; i++) {
-                board[i] = null;
-            }
-            cells.forEach(cell => cell.textContent = '');
-            resultEl.textContent = '';
-            currentPlayer = 'X';
-        }
     </script>
 </body>
 </html>
