Add Back button and apply Orbitron font

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -15,6 +15,7 @@
             <div class="logo"></div>
         </div>
         <div class="bank-name" onclick="location.href='index.html'">Galactic Reserve</div>
+        <div class="nav-item" onclick="location.href='index.html'">Back to the Strategies</div>
     </div>
     <div class="tt-container">
         <h1>Tic Tac Toe</h1>
