--- a/tictactoe.html
+++ b/tictactoe.html
@@ -28,7 +28,7 @@
                 <option value="easy">Easy</option>
                 <option value="noob">Noob</option>
             </select>
-            <button id="restart">Restart</button>
+            <button class="rest" id="restart">Restart</button>
         </div>
         <div id="board" class="board"></div>
         <div id="status" class="status"></div>
