Add cheater difficulty to Tic Tac Toe

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -22,6 +22,7 @@
         <div class="controls">
             <label for="difficulty">Difficulty:</label>
             <select id="difficulty">
+                <option value="cheater">Cheater</option>
                 <option value="impossible">Impossible</option>
                 <option value="hard">Hard</option>
                 <option value="normal" selected>Normal</option>
