Add simple Game 21 page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <span class="close" onclick="document.getElementById('gameModal').style.display='none'">&times;</span>
             <h2>Games</h2>
             <button class="baton" onclick="location.href='tictactoe.html'">Tic-Tac-Toe</button>
+            <button class="baton" onclick="location.href='game21.html'">21</button>
         </div>
     </div>
     <div class="container">
