--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
         <div class="modal-content">
             <span class="close" onclick="document.getElementById('gameModal').style.display='none'">&times;</span>
             <h2>Games</h2>
-            <button class="baton" onclick="location.href='tictactoe.html'">Tic-Tac-Toe</button>
-            <button class="baton" onclick="location.href='game21.html'">21</button>
+            <div class="game-buttons">
+                <button class="baton" onclick="location.href='tictactoe.html'">Tic-Tac-Toe</button>
+                <button class="baton" onclick="location.href='game21.html'">21</button>
+            </div>
         </div>
     </div>
     <div class="container">
