Add Tactic-21 number strategy game

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <div class="game-buttons">
                 <button class="baton" onclick="location.href='tictactoe.html'">Tic-Tac-Toe</button>
                 <button class="baton" onclick="location.href='game21.html'">21</button>
+                <button class="baton" onclick="location.href='tactic21.html'">Тактик-21</button>
             </div>
         </div>
     </div>
