--- a/game21.html
+++ b/game21.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="game21.css">
+    <script src="game21.js" defer></script>
 </head>
 <body>
     <div class="nav-bar">
