Restructure project into organized folders

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Galactic Reserve Investment Simulator</title>
         <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="logo.png"> <!-- Добавьте этот тег для favicon -->
-        <link rel="stylesheet" href="Style.css">
-        <script src="Script.js" defer></script>
+        <link rel="icon" type="image/png" href="images/logo.png"> <!-- Добавьте этот тег для favicon -->
+        <link rel="stylesheet" href="css/style.css">
+        <script src="js/script.js" defer></script>
     </head>
     
 <body>
@@ -37,9 +37,9 @@
             <span class="close" onclick="document.getElementById('gameModal').style.display='none'">&times;</span>
             <h2>Games</h2>
             <div class="game-buttons">
-                <button class="baton" onclick="location.href='tictactoe.html'">Tic-Tac-Toe</button>
-                <button class="baton" onclick="location.href='game21.html'">21</button>
-                <button class="baton" onclick="location.href='tactic21.html'">Tactic-21</button>
+                <button class="baton" onclick="location.href='pages/tictactoe.html'">Tic-Tac-Toe</button>
+                <button class="baton" onclick="location.href='pages/game21.html'">21</button>
+                <button class="baton" onclick="location.href='pages/tactic21.html'">Tactic-21</button>
             </div>
         </div>
     </div>
