--- a/pages/tictactoe.html
+++ b/pages/tictactoe.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Style.css">
-    <link rel="stylesheet" href="tictactoe.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/tictactoe.css">
     <script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
-    <script src="tictactoe.js" defer></script>
+    <script src="../js/tictactoe.js" defer></script>
 </head>
 <body>
     <div class="nav-bar">
         <div class="logo-container">
             <div class="logo"></div>
         </div>
-        <div class="bank-name" onclick="location.href='index.html'">Galactic Reserve</div>
-        <div class="nav-item" onclick="location.href='index.html'">Back to the Strategies</div>
+        <div class="bank-name" onclick="location.href='../index.html'">Galactic Reserve</div>
+        <div class="nav-item" onclick="location.href='../index.html'">Back to the Strategies</div>
     </div>
     <div class="tt-container">
         <h1>Tic Tac Toe</h1>
