--- a/pages/game21.html
+++ b/pages/game21.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game 21</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Style.css">
-    <link rel="stylesheet" href="game21.css">
-    <script src="game21.js" defer></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/game21.css">
+    <script src="../js/game21.js" defer></script>
 </head>
 <body>
     <div class="nav-bar">
         <div class="logo-container">
             <div class="logo"></div>
         </div>
-        <div class="bank-name" onclick="location.href='index.html'">Galactic Reserve</div>
-        <div class="nav-item" onclick="location.href='index.html'">Back to the Strategies</div>
+        <div class="bank-name" onclick="location.href='../index.html'">Galactic Reserve</div>
+        <div class="nav-item" onclick="location.href='../index.html'">Back to the Strategies</div>
     </div>
     <div class="game21-container">
         <h1>Game 21</h1>
