Enhance Durak AI with difficulty options

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <button class="baton" onclick="location.href='pages/tictactoe.html'">Tic-Tac-Toe</button>
                 <button class="baton" onclick="location.href='pages/game21.html'">21</button>
                 <button class="baton" onclick="location.href='pages/tactic21.html'">Tactic-21</button>
+                <button class="baton" onclick="location.href='pages/durak.html'">Durak</button>
             </div>
         </div>
     </div>
