Fix Durak gameplay roles and show deck

--- a/pages/durak.html
+++ b/pages/durak.html
@@ -23,6 +23,7 @@
         <h1>Durak</h1>
         <div id="aiHand" class="hand"></div>
         <div id="table" class="table"></div>
+        <div id="stock" class="stock"></div>
         <div id="playerHand" class="hand"></div>
         <div id="status" class="status"></div>
         <div class="controls">
