Add throw-in mechanic and beaten button

--- a/pages/durak.html
+++ b/pages/durak.html
@@ -35,6 +35,7 @@
             </select>
             <button class="baton" id="newGame">New Game</button>
             <button class="baton" id="take">Take</button>
+            <button class="baton" id="beat">Beaten</button>
             <button class="baton" id="rulesButton">&#128214; Rules</button>
         </div>
     </div>
