Implement dynamic attack limit in Durak

--- a/pages/durak.html
+++ b/pages/durak.html
@@ -51,8 +51,8 @@
             <h4>First Attack</h4>
             <p>Cards are ranked 6, 7, 8, 9, 10, J, Q, K, A (ace high). Any trump beats every card of the other suits. The attacker plays one card face up on the table. The defender must beat it either with a higher card of the same suit or with any trump card.</p>
             <h4>Continuing the Attack</h4>
-            <p>If the defender succeeds, the attacker (or other players in clockwise order) may add new attacking cards. Each new card must match the rank of any card already on the table. No more than six attacking cards may be played in a round. The defender must beat each new card in the same fashion.</p>
-            <p>A defender who cannot or chooses not to beat the current attack must pick up all cards on the table. After the defender picks up, other players may add cards matching any rank already played, up to the six card limit.</p>
+            <p>If the defender succeeds, the attacker (or other players in clockwise order) may add new attacking cards. Each new card must match the rank of any card already on the table. Before any cards have been successfully discarded, the attack is limited to five cards. After the first discard, the limit increases to six. The defender must beat each new card in the same fashion.</p>
+            <p>A defender who cannot or chooses not to beat the current attack must pick up all cards on the table. After the defender picks up, other players may add cards matching any rank already played, up to the current attack limit.</p>
             <p>If the defender beats all attacking cards and no one adds more, all cards from that round go to the discard pile and the defender becomes the next attacker.</p>
             <p>No one may look through the discard pile during play.</p>
             <h4>End of Turn</h4>
