--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <button class="baton" onclick="location.href='pages/game21.html'">21</button>
                 <button class="baton" onclick="location.href='pages/tactic21.html'">Tactic-21</button>
                 <button class="baton" onclick="location.href='pages/durak.html'">Durak</button>
+                <button class="baton" onclick="location.href='pages/uno.html'">UNO</button>
             </div>
         </div>
     </div>
