Fix UNO draw4 logic and add color selection UI

--- a/pages/uno.html
+++ b/pages/uno.html
@@ -32,5 +32,11 @@
             <button class="baton" id="draw">Draw</button>
         </div>
     </div>
+    <div id="colorSelect" class="color-select hidden">
+        <div class="card red" data-color="red"></div>
+        <div class="card green" data-color="green"></div>
+        <div class="card blue" data-color="blue"></div>
+        <div class="card yellow" data-color="yellow"></div>
+    </div>
 </body>
 </html>
