Add drawn card play prompt

--- a/pages/uno.html
+++ b/pages/uno.html
@@ -38,5 +38,10 @@
         <div class="card blue" data-color="blue"></div>
         <div class="card yellow" data-color="yellow"></div>
     </div>
+    <div id="drawSelect" class="draw-select hidden">
+        <div class="card drawn-card"></div>
+        <div class="card green option" data-choice="yes">Play</div>
+        <div class="card red option" data-choice="no">Keep</div>
+    </div>
 </body>
 </html>
