--- a/pages/uno.html
+++ b/pages/uno.html
@@ -40,8 +40,10 @@
     </div>
     <div id="drawSelect" class="draw-select hidden">
         <div class="card drawn-card"></div>
-        <div class="card green option" data-choice="yes">Play</div>
-        <div class="card red option" data-choice="no">Keep</div>
+        <div class="options">
+            <div class="card option black" data-choice="yes">Play</div>
+            <div class="card option black" data-choice="no">Keep</div>
+        </div>
     </div>
 </body>
 </html>
