Add stacking for wild +4 cards

--- a/pages/uno.html
+++ b/pages/uno.html
@@ -45,5 +45,8 @@
             <div class="card option black" data-choice="no">Keep</div>
         </div>
     </div>
+    <div id="stackSelect" class="stack-select hidden">
+        <div class="options"></div>
+    </div>
 </body>
 </html>
