Remove Features label from Buckshot Roulette button

--- a/pages/buckshot.html
+++ b/pages/buckshot.html
@@ -21,7 +21,7 @@
         <h1>Buckshot Roulette</h1>
         <div class="status" id="status">Press Start to begin.</div>
         <div class="controls">
-            <button class="baton" id="settingsButton">&#9881; Features</button>
+            <button class="baton" id="settingsButton">&#9881;</button><!-- Features button -->
             <button class="baton" id="startBtn">Start Round</button>
             <button class="baton" id="shootSelf" disabled>Shoot Self</button>
             <button class="baton" id="shootDealer" disabled>Shoot Dealer</button>
