--- a/pages/buckshot.html
+++ b/pages/buckshot.html
@@ -50,6 +50,10 @@
             <br>
             <label><input type="checkbox" id="colorblindToggle"> Colorblind Mode</label>
             <br>
+            <label><input type="checkbox" id="keepMagToggle"> Keep Magnifying Glass</label>
+            <br>
+            <label><input type="checkbox" id="keepCigToggle"> Keep Cigarette Pack</label>
+            <br>
             <label>Animation Speed: <span id="speedDisplay">1x</span></label>
             <input id="speedRange" type="range" min="0.5" max="2" step="0.1" value="1">
         </div>
