--- a/pages/buckshot.html
+++ b/pages/buckshot.html
@@ -54,7 +54,7 @@
             <br>
             <label><input type="checkbox" id="keepCigToggle"> Keep Cigarette Pack</label>
             <br>
-            <label><input type="checkbox" id="doubleModeToggle"> Double or Nothing Mode</label>
+            <label><input type="checkbox" id="doubleModeToggle" checked> Double or Nothing Mode</label>
             <br>
             <label>Animation Speed: <span id="speedDisplay">1x</span></label>
             <input id="speedRange" type="range" min="0.5" max="2" step="0.1" value="1">
