Add round tracking and bank scoreboard

--- a/pages/buckshot.html
+++ b/pages/buckshot.html
@@ -19,6 +19,10 @@
     </div>
     <div class="bs-container">
         <h1>Buckshot Roulette</h1>
+        <div class="info">
+            Round: <span id="roundNum">0</span>
+            Bank: <span id="bankAmount">0</span>
+        </div>
         <div class="status" id="status">Press Start to begin.</div>
         <div class="controls">
             <button class="baton" id="settingsButton">&#9881;</button><!-- Features button -->
