Add Adrenaline selection menu

--- a/pages/buckshot.html
+++ b/pages/buckshot.html
@@ -64,5 +64,11 @@
             <input id="speedRange" type="range" min="0.5" max="2" step="0.1" value="1">
         </div>
     </div>
+    <div id="adrenalineModal" class="modal">
+        <div class="modal-content">
+            <h2>Choose an item to steal (<span id="adrenalineTimer">10</span>)</h2>
+            <div id="adrenalineItems" class="items"></div>
+        </div>
+    </div>
 </body>
 </html>
