Add shell counter indicator with toggle

--- a/pages/buckshot.html
+++ b/pages/buckshot.html
@@ -45,6 +45,7 @@
             </div>
         </div>
         <div class="magazine" id="magazine"></div>
+        <div id="shellIndicator" class="shell-indicator"></div>
     </div>
     <div id="settingsModal" class="modal">
         <div class="modal-content">
@@ -59,6 +60,8 @@
             <label><input type="checkbox" id="keepCigToggle"> Keep Cigarette Pack</label>
             <br>
             <label><input type="checkbox" id="doubleModeToggle" checked> Double or Nothing Mode</label>
+            <br>
+            <label><input type="checkbox" id="indicatorToggle" checked> Show Shell Counter</label>
             <br>
             <label>Animation Speed: <span id="speedDisplay">1x</span></label>
             <input id="speedRange" type="range" min="0.5" max="2" step="0.1" value="1">
