Add 3D scene styling to Buckshot Roulette

--- a/pages/buckshot.html
+++ b/pages/buckshot.html
@@ -24,6 +24,20 @@
             Bank: <span id="bankAmount">0</span>
         </div>
         <div class="status" id="status">Press Start to begin.</div>
+        <div class="bs-scene" id="bsScene">
+            <div class="scene-ring">
+                <div class="table-surface"></div>
+                <div class="scene-marker player-marker">Player</div>
+                <div class="scene-marker dealer-marker">Dealer</div>
+                <div class="shotgun" id="shotgunModel">
+                    <div class="shotgun-stock"></div>
+                    <div class="shotgun-body"></div>
+                    <div class="shotgun-barrel"></div>
+                </div>
+                <div class="shell-rack" id="shellRack"></div>
+                <div class="muzzle-flash" id="muzzleFlash"></div>
+            </div>
+        </div>
         <div class="controls">
             <button class="baton" id="settingsButton">&#9881;</button><!-- Features button -->
             <button class="baton" id="startBtn">Start Round</button>
