--- a/pages/buckshot.html
+++ b/pages/buckshot.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/buckshot.css">
+    <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
+    <script src="../js/buckshot-scene.js" defer></script>
     <script src="../js/buckshot.js" defer></script>
 </head>
 <body>
@@ -18,6 +20,15 @@
         <div class="nav-item" onclick="location.href='../index.html'">Back to the Strategies</div>
     </div>
     <div class="bs-container">
+        <div class="scene-wrap">
+            <div id="buckshotScene" class="buckshot-scene">
+                <div class="scene-hud">
+                    <div class="scene-title">Buckshot Roulette</div>
+                    <div class="scene-subtitle">Night shift table • 3D preview</div>
+                </div>
+                <div class="scene-vignette"></div>
+            </div>
+        </div>
         <h1>Buckshot Roulette</h1>
         <div class="info">
             Round: <span id="roundNum">0</span>
